--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Put together Mr. Potato Head!</title>
 </head>
 <body>
+    <h1>hello</h1>
     <img id="body" src="images/potatoBody.png">
     <img id="eyes" src="images/potatoEyes.png">
     <img id="hat" src="images/potatoHat.png">
